--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
   </head>
 <body>
 
+  <%= link_to "Temporary Landing Page", root_url -%>
+
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
   
