--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   </head>
 <body>
 
-  <%= link_to "Temporary Landing Page", root_url -%>
+  <%= link_to "Home", root_url -%>
 
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
