--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -13,7 +13,7 @@
       <th>Timezone</th>
       <th>Currency</th>
       <th>Slug</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
@@ -30,6 +30,7 @@
         <td><%= space.timezone %></td>
         <td><%= space.currency %></td>
         <td><%= space.slug %></td>
+        <td><%= link_to 'Members', space_members_path(space) %></td>
         <td><%= link_to 'Show', space %></td>
         <td><%= link_to 'Edit', edit_space_path(space) %></td>
         <td><%= link_to 'Destroy', space, method: :delete, data: { confirm: 'Are you sure?' } %></td>
