--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,60 +18,78 @@
     .page-container.horizontal-menu
       %header.navbar.navbar-fixed-top
 
-        .navbar-inner
+        .navbar-inner.row
           -# LOGO
-          .navbar-brand
-            %a{:href => "/"}
+          .navbar-brand.col-sm-3
+            %a.nav-logo{:href => "/"}
               = image_tag "logomark.png", height: 30
 
           -# MAIN MENU
-          %ul.navbar-nav.centered
-            %li
-              %a
-                %i.entypo-gauge
-                %span Dashboard
+          .col-sm-6.centered
+            %ul.navbar-nav
+              %li
+                %a
+                  %i.entypo-gauge
+                  %span Dashboard
 
-            %li
-              %a
-                %i.entypo-gauge
-                %span
-                  Dashboard
-            %li
-              %a
-                %i.entypo-gauge
-                %span
-                  Dashboard
-            %li
-              %a
-                %i.entypo-gauge
-                %span
-                  Dashboard
+              %li
+                %a
+                  %i.entypo-gauge
+                  %span
+                    Dashboard
+              %li
+                %a
+                  %i.entypo-gauge
+                  %span
+                    Dashboard
+              %li
+                %a
+                  %i.entypo-gauge
+                  %span
+                    Dashboard
 
-          %ul.user-info.pull-right.pull-none-xsm
-            %li.dropdown
-              %a.dropdown-toggle{'data-toggle' => 'dropdown'}
-                %img.img-circle{'src' => 'https://s3.amazonaws.com/uifaces/faces/twitter/adhamdannaway/73.jpg', 'width' => '44'}
-              %i.entypo-down-open
-            %li
-              %ul.dropdown-menu
-                %li.caret
+          .col-sm-3
+            %ul.user-info.pull-right.pull-none-xsm
+              %li.dropdown
+                %a.dropdown-toggle{'data-toggle' => 'dropdown'}
+                  %img.img-circle{'src' => 'https://s3.amazonaws.com/uifaces/faces/twitter/adhamdannaway/73.jpg', 'width' => '44'}
+                %i.entypo-down-open
+              %li
+                %ul.dropdown-menu
+                  %li.caret
+                    %li
+                      %a
+                        Edit Profile
+                    %li
+                      %a
+                        %i.entypo-mail
+                        Inbox
+
+            %ul.nav.navbar-right.pull-right
+              %li.dropdown
+                %a.dropdown-toggle{'data-toggle' => 'dropdown', 'data-hover' => 'dropdown', 'data-close-others' => 'true'}
+                  %i.entypo-mail
+                  %span.badge.badge-info 2
+                %ul.dropdown-menu
                   %li
+                    %ul.dropdown-menu-list.scroller
+                      %li.active
+                        %a
+                          %span.image.pull-right
+                            %img.img-circle{'src' => 'https://s3.amazonaws.com/uifaces/faces/twitter/adhamdannaway/73.jpg', 'width' => '44'}
+                          %span.line
+                            %strong
+                              Anthony Penner
+                            &ndash; Yesterday
+                          %span.line.desc.small
+                            This ain’t our first item, it is the best of the rest.
+                  %li.external
                     %a
-                      Edit Profile
-                  %li
-                    %a
-                      %i.entypo-mail
-                      Inbox
+                      All Messages
 
-          %ul.nav.navbar-right.pull-right
-            %li.dropdown
-              %a.dropdown-toggle{'data-toggle' => 'dropdown', 'data-hover' => 'dropdown', 'data-close-others' => 'true'}
-                %i.entypo-mail
-                %span.badge.badge-info 2
-
-            %li.dropdown
-              %a.dropdown-toggle{'data-toggle' => 'dropdown', 'data-hover' => 'dropdown', 'data-close-others' => 'true'}
-                %i.entypo-bell
-                %span.badge.badge-secondary 2
+              %li.dropdown
+                %a.dropdown-toggle{'data-toggle' => 'dropdown', 'data-hover' => 'dropdown', 'data-close-others' => 'true'}
+                  %i.entypo-bell
+                  %span.badge.badge-secondary 2
 
     = yield
