--- a/app/views/payment_methods/_form.html.erb
+++ b/app/views/payment_methods/_form.html.erb
@@ -19,7 +19,112 @@
     <%= f.label :billing_email %><br>
     <%= f.text_field :billing_email %>
   </div>
+
+  <br/>
+  <br/>
+  <br/>
+
+  
+  <p style="">All payments are securely processed by Stripe. No credit card data is stored on our servers. Once a month, you'll receive a payment
+    receipt when your credit card is charged.  
+  </span>
+
+  <p class="alert alert-warning payment-errors" style="display:none;"></p>
+  
+  <div style="padding:12px;margin-bottom:10px;margin-top:15px;">
+    <div class="row" style="margin-bottom:20px;">
+      <div class="col-md-12">
+        <label  style="width:100%;">
+          <span>Card Number</span><br/>
+          <input type="text" size="20" data-stripe="number"  class="form-control" style="width:100%;"/>
+        </label>
+      </div>
+    </div>
+    
+    <div class="row" style="">
+      <div class="col-md-6">
+        <label  style="width:100%;">
+          <span>Expiration Date</span><br/>
+          <select data-stripe="exp-month" class="form-control">
+            <option value="01">01 - January</option>
+            <option value="02">02 - February</option>
+            <option value="03">03 - March</option>
+            <option value="04">04 - April</option>
+            <option value="05">05 - May</option>
+            <option value="06">06 - June</option>
+            <option value="07">07 - July</option>
+            <option value="08">08 - August</option>
+            <option value="09">09 - September</option>
+            <option value="10">10 - October</option>
+            <option value="11">11 - November</option>
+            <option value="12">12 - December</option>
+          </select>
+        </label>
+      </div>
+      <div class="col-md-3">
+        <label  style="width:100%;">
+          <span>&nbsp;</span><br/>
+          <select data-stripe="exp-year"  class="form-control">
+            <% (Time.now.year..Time.now.year + 6).each do |year| -%>
+              <option value="<%=year-%>"><%=year-%></option>
+            <% end -%>
+          </select>
+        </label>
+      </div>
+      <div class="col-md-3">
+        <label  style="width:100%;">
+          <span>CVC</span><br/>
+          <input type="text" size="4" data-stripe="cvc"  class="form-control" style="width:100%;"/>
+        </label>
+      </div>
+    </div>
+  </div>
+   
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+
+<% content_for :javascript do -%>
+  
+  <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+  
+  <script type="text/javascript">
+    
+   Stripe.setPublishableKey('<%=ENV['STRIPE_PUBLISHABLE_KEY']-%>');
+   
+   var stripeResponseHandler = function(status, response) {
+     var form = $('#new_payment_method');
+     
+     if (response.error) {
+       // Show the errors on the form
+       form.find('.payment-errors').text(response.error.message).show();
+       form.find('button').prop('disabled', false);
+     } else {
+       // token contains id, last4, and card type
+       var token = response.id;
+       // Insert the token into the form so it gets submitted to the server
+       form.append($('<input type="hidden" id="payment_method_stripe_token" name="payment_method[stripe_token]" />').val(token));
+       // and submit
+       form.get(0).submit();
+     }
+   };
+   
+   jQuery(function($) {
+     $('#new_payment_method').submit(function(event) {
+       var form = $(this);
+
+       // Disable the submit button to prevent repeated clicks
+       form.find('button').prop('disabled', true);
+       
+       Stripe.card.createToken(form, stripeResponseHandler);
+       
+       // Prevent the form from submitting with the default action
+       return false;
+     });
+   });
+  </script>
+    
+<% end -%>
+
+
