--- a/app/views/payment_methods/edit.html.erb
+++ b/app/views/payment_methods/edit.html.erb
@@ -1,5 +1,9 @@
 <h1>Editing payment_method</h1>
 
+<% unless @payment_method.last_4_digits.blank? -%>
+  Current Card: <%= last_four(@payment_method.last_4_digits)-%>
+<% end -%>
+
 <%= render 'form' %>
 
 <%= link_to 'Show', @payment_method %> |
