--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,24 +29,24 @@
             %ul.navbar-nav
               %li
                 %a
-                  %i.entypo-gauge
-                  %span Dashboard
+                  %i.entypo-home
+                  %span Space
 
               %li
                 %a
-                  %i.entypo-gauge
+                  %i.entypo-users
                   %span
-                    Dashboard
+                    Community
               %li
                 %a
-                  %i.entypo-gauge
+                  %i.entypo-credit-card
                   %span
-                    Dashboard
+                    Payments
               %li
                 %a
-                  %i.entypo-gauge
+                  %i.entypo-cog
                   %span
-                    Dashboard
+                    Settings
 
           .col-sm-3
             %ul.user-info.pull-right.pull-none-xsm
