Added customer io integration.  Business logic stuff (trials, prompt for payment and force space to select payment method).  Space subscriptions to plans.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -92,6 +92,13 @@
                   %i.entypo-bell
                   %span.badge.badge-secondary 2
 
+    = render 'shared/need_payment_method'
+
+    .container
+      - flash.each do |key, value|
+        %div{ :class => flash_class(key), :style => "margin-top:25px;" }
+          = value
+
     .container 
       = yield
     
