--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -6,14 +6,9 @@
         %a.logo{href: "index.html"}
           =image_tag "dovetail-white.png", width: '200'
         %p.description Create an account, it's free and takes few moments only!
-        .login-progressbar-indicator
-          %h3 43%
-          %span logging in...
-    .login-progressbar
-      %div
     .login-form
       .login-content
-        %form#form_register{method: "post", role: "form"}
+        = form_for(resource, as: resource_name, url: registration_path(resource_name), id: 'form_register') do |f|
           .form-register-success
             %i.entypo-check
             %h3 You have been successfully registered.
@@ -29,54 +24,21 @@
                 .input-group
                   .input-group-addon
                     %i.entypo-user
-                  %input#name.form-control{autocomplete: "off", name: "name", placeholder: "First Name", type: "text"}
-              .form-group
-                .input-group
-                  .input-group-addon
-                    %i.entypo-user
-                  %input#birthday.form-control{autocomplete: "off", name: "name", placeholder: "Last Name", type: "text"}
+                  %input#name.form-control{autocomplete: "off", name: "name", placeholder: "Full Name", type: "text"}
               .form-group
                 .input-group
                   .input-group-addon
                     %i.entypo-lock
                   %input#password.form-control{autocomplete: "off", name: "password", placeholder: "Choose Password", type: "password"}
               .form-group
-                %button.btn.btn-success.btn-block.btn-login{type: "submit"}
+                %button.btn.btn-success.btn-block.btn-login#submit_form{type: "submit"}
                   %i.entypo-right-open-mini
                   Complete Registration
         .login-bottom-links
-          %a.link{href: "extra-login.html"}
+          = link_to new_user_session_path, class: 'link' do
             %i.entypo-lock
             Return to Login Page
-          %br
-          %a{href: "#"} ToS
-          \-
-          %a{href: "#"} Privacy Policy
-
-
-  = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-    = devise_error_messages!
-    .div
-      = f.label :email
-      = f.email_field :email, autofocus: true
-
-    .div
-      = f.label :first_name
-      = f.text_field :first_name
-
-    .div
-      = f.label :last_name
-      = f.text_field :last_name
-
-    .div
-      = f.label :password
-      = f.password_field :password, autocomplete: "off"
-
-    .div
-      = f.label :password_confirmation
-      = f.password_field :password_confirmation, autocomplete: "off"
-
-    .div
-      = f.submit "Sign up"
-
-    = render "users/shared/links"
+          -#%br
+            %a{href: "#"} ToS
+            \-
+            %a{href: "#"} Privacy Policy
