--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -13,7 +13,7 @@
       <th>Timezone</th>
       <th>Currency</th>
       <th>Slug</th>
-      <th colspan="5"></th>
+      <th colspan="6">Options</th>
     </tr>
   </thead>
 
@@ -32,6 +32,7 @@
         <td><%= space.slug %></td>
         <td><%= link_to 'Members', space_members_path(space) %></td>
         <td><%= link_to 'Locations', space_locations_path(space) %></td>
+        <td><%= link_to 'Admins', space_admins_path(space) %></td>
         <td><%= link_to 'Show', space %></td>
         <td><%= link_to 'Edit', edit_space_path(space) %></td>
         <td><%= link_to 'Destroy', space, method: :delete, data: { confirm: 'Are you sure?' } %></td>
