Work on Space Creation view

--- a/app/views/spaces/new.html.haml
+++ b/app/views/spaces/new.html.haml
@@ -4,9 +4,23 @@
 
 %hr
 
-%h3 Space Info
+= simple_form_for @space, html: { class: 'form-horizontal' }, wrapper: :horizontal_form, wrapper_mappings: {check_boxes: :horizontal_radio_and_checkboxes, radio_buttons: :horizontal_radio_and_checkboxes, file: :horizontal_file_input, boolean: :horizontal_boolean } do |s|
+
+  %h3 Space Info
+  = s.input :name, label: 'Space Name' 
+  = s.input :slug, label: 'URL Slug'
+  -# :logo
 
 
-%h3 Location
+  %h3 Location
+  = s.simple_fields_for :location do |l|
+    = l.input :address, label: 'Street Address'
+    = l.input :city, label: 'City'
+    = l.input :state, label: 'State / Province'
+    = l.input :postal_code, label: 'Postal Code'
+    = l.input :country, label: 'Country'
+    = l.input :timezone, label: 'Timezone'
 
-%h3 Billing Settings
+    %h3 Billing Settings
+    = l.input :currency
+    = l.input :tax_rate
