--- a/app/views/payment_methods/_form.html.erb
+++ b/app/views/payment_methods/_form.html.erb
@@ -82,7 +82,7 @@
 
   <% if @payment_method.new_record? && current_user.created_spaces.missing_payment_method.count > 0 -%>
     <h4>Use this payment method for:</h4>
-    <p><em>Please note, for each selection, your credit card will be billed immeadiately(sp) and when the subscription renews (all dependent on the plan selected for the space).</em></p>
+    <p><em>Please note, for each selection, your credit card will be billed immediately and when the subscription renews (all dependent on the plan selected for the space).</em></p>
     <%  current_user.created_spaces.missing_payment_method.each do |space|-%>
       <%=check_box_tag("space_ids[]", space.id)-%> <%= space.name-%> <%= space.plan_description-%><br>
     <% end %>
