--- a/app/views/payment_methods/index.html.erb
+++ b/app/views/payment_methods/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Listing payment_methods</h1>
+<h1>Payment Methods</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Billing name</th>
