--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,20 +1,19 @@
-<h1>Listing locations</h1>
-
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
-      <th colspan="3"></th>
+      <th></th>
     </tr>
   </thead>
 
   <tbody>
     <% @locations.each do |location| %>
       <tr>
-        <td><%= location.name %></td>
-        <td><%= link_to 'Show', [@space, location] %></td>
-        <td><%= link_to 'Edit', edit_space_location_path(@space, location) %></td>
-        <td><%= link_to 'Destroy', [@space, location], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= location.description %></td>
+        <td class="text-right">
+          <%= link_to 'Edit', edit_space_location_path(@space, location) %>
+          <%= link_to 'Destroy', [@space, location], method: :delete, data: { confirm: 'Are you sure?' } %>
+        </td>
       </tr>
     <% end %>
   </tbody>
