--- a/app/views/spaces/edit.html.erb
+++ b/app/views/spaces/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing space</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @space %> |
-<%= link_to 'Back', spaces_path %>
+<div class="col-md-6 col-md-offset-3">
+  <%= render 'form' %>
+</div>
