--- a/lib/templates/haml/scaffold/_form.html.haml
+++ b/lib/templates/haml/scaffold/_form.html.haml
@@ -1,10 +1,8 @@
-= simple_form_for(@<%= singular_table_name %>) do |f|
-  = f.error_notification
-
-  .form-inputs
+= form_for(@<%= singular_table_name %>) do |s| 
   <%- attributes.each do |attribute| -%>
-    = f.<%= attribute.reference? ? :association : :input %> :<%= attribute.name %>
+    .form-group{:class => has_error(@<%= singular_table_name %>, :<%= attribute.name %>)}
+      = f.label :<%= attribute.name %>
+      = f.text_field :<%= attribute.name %>, class: "form-control"
+      = field_errors(@<%= singular_table_name %>,  :<%= attribute.name %>)
   <%- end -%>
-
-  .form-actions
-    = f.button :submit
+  = f.submit class: "btn btn-primary"
