Fixed a bug in the fix up of membership models changes.  Fixed up the members form (Haml, bootstrapped)

--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing member</h1>
+<h1>Edit member</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', [@space, @member] %> |
-<%= link_to 'Back', space_members_path %>
