--- a/app/views/members/_form.html.haml
+++ b/app/views/members/_form.html.haml
@@ -8,6 +8,10 @@
       = f.label :email
       = f.text_field :email, class: "form-control"
       = field_errors(@member, :email)
+    .form-group{:class => has_error(@member, :location)}
+      = f.label :location 
+      = f.collection_select :location_id, @space.locations, :id, :name, {allow_blank: false }, {class: "form-control"}
+      = field_errors(@member, :location)
     = f.submit class: "btn btn-primary"
     or
     = link_to("Cancel", :back)
