--- a/app/views/locations/edit.html.erb
+++ b/app/views/locations/edit.html.erb
@@ -1,6 +1,2 @@
-<h1>Editing location</h1>
-
+<h1>Edit location</h1>
 <%= render 'form' %>
-
-<%= link_to 'Show', [@space, @location] %> |
-<%= link_to 'Back', space_locations_path(@space) %>
