Hid (for now) the two drop downs for messages and alerts

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -80,7 +80,7 @@
 
             %ul.nav.navbar-right.pull-right
               %li.dropdown
-                %a.dropdown-toggle{'data-toggle' => 'dropdown', 'data-hover' => 'dropdown', 'data-close-others' => 'true'}
+                %a.dropdown-toggle.hidden{'data-toggle' => 'dropdown', 'data-hover' => 'dropdown', 'data-close-others' => 'true'}
                   %i.entypo-mail
                   %span.badge.badge-info 2
                 %ul.dropdown-menu
@@ -101,7 +101,7 @@
                       All Messages
 
               %li.dropdown
-                %a.dropdown-toggle{'data-toggle' => 'dropdown', 'data-hover' => 'dropdown', 'data-close-others' => 'true'}
+                %a.dropdown-toggle.hidden{'data-toggle' => 'dropdown', 'data-hover' => 'dropdown', 'data-close-others' => 'true'}
                   %i.entypo-bell
                   %span.badge.badge-secondary 2
                 %ul.dropdown-menu
