--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-6">
-  <h2>Managers</h2>
+  <h2>Current Managers</h2>
   
   <table class="table">
     <thead>
@@ -12,7 +12,7 @@
     <tbody>
       <% @admins.each do |admin| %>
         <tr>
-          <td><%= admin.email %></td>
+          <td><%= admin.email %> <%= admin.id == current_user.id ? "(you)" : ""-%></td>
           <td><%= link_to 'Destroy',"#", method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
       <% end %>
