--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -42,7 +42,7 @@
       <% end %>
 
       <% if @invites.empty? -%>
-        <tr><td class="text-center" colspan="4"><i>You have no unaccepted invites.</td></tr>
+        <tr><td class="text-center" colspan="4"><i>There are no pending invites.</td></tr>
       <% end -%>
 
     </tbody>
