--- a/lib/templates/haml/scaffold/_form.html.haml
+++ b/lib/templates/haml/scaffold/_form.html.haml
@@ -1,9 +1,9 @@
-= form_for(@<%= singular_table_name %>) do |s| 
+= form_for(@<%= singular_table_name %>) do |f| 
   <%- attributes.each do |attribute| -%>
-    .form-group{:class => has_error(@<%= singular_table_name %>, :<%= attribute.name %>)}
-      = f.label :<%= attribute.name %>
-      = f.text_field :<%= attribute.name %>, class: "form-control"
-      = field_errors(@<%= singular_table_name %>,  :<%= attribute.name %>)
+  .form-group{:class => has_error(@<%= singular_table_name %>, :<%= attribute.name %>)}
+    = f.label :<%= attribute.name %>
+    = f.text_field :<%= attribute.name %>, class: "form-control"
+    = field_errors(@<%= singular_table_name %>,  :<%= attribute.name %>)
   <%- end -%>
   = f.submit class: "btn btn-primary" 
   or 
