Basic support/crud for resources and plans.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -44,7 +44,7 @@
                     %i.entypo-credit-card
                     %span
                       Payments
-              %li{:class => active_tab(["spaces", "admins", "locations"])}
+              %li{:class => active_tab(["spaces", "admins", "locations", "resources", "plans"])}
                 - if @space
                   %a{:href => edit_space_path(@space)}
                     %i.entypo-cog
