--- a/app/views/shared/_settings.html.haml
+++ b/app/views/shared/_settings.html.haml
@@ -2,5 +2,9 @@
   = link_to "Space", edit_space_path(@space)
 %li{:class => active_tab("locations")}
   = link_to "Locations", space_locations_path(@space)
+%li{:class => active_tab("resources")}
+  = link_to "Resources", space_resources_path(@space)
+%li{:class => active_tab("plans")}
+  = link_to "Plans", space_plans_path(@space)
 %li{:class => active_tab("admins")}
   = link_to "Managers", space_admins_path(@space)
