--- a/app/views/payments/_form.html.haml
+++ b/app/views/payments/_form.html.haml
@@ -1,2 +1,21 @@
-%p TODO: Form for payments
+.col-md-6.col-md-offset-3
+  %h4
+    New Payment from 
+    = @member.name
+  = form_for(@payment, url: space_member_payments_path(@space, @member, @payment)) do |f| 
+    .form-group{:class => "#{has_error(@payment, :description)} col-md-7", style: "padding-left:0;"}
+      = f.label :description 
+      = f.text_field :description, class: "form-control"
+      = field_errors(@payment, :description)
+    .form-group{:class => "#{has_error(@payment, :identifier)} col-md-2", style: "padding-left:0;padding-right:0;"}
+      = f.label :identifier, "Receipt Num."
+      = f.text_field :identifier, class: "form-control"
+      = field_errors(@payment, :identifier)
+    .form-group{:class => "#{has_error(@payment, :due_date)} col-md-3", style: "padding-right:0;"}
+      = f.label :total_amount, "Amount"
+      = f.text_field :total_amount, class: "form-control"
+      = field_errors(@payment, :total_amount)
+    = f.submit class: "btn btn-primary"
+    or
+    = link_to("Cancel", :back)
 
