--- a/app/views/credit_notes/_form.html.haml
+++ b/app/views/credit_notes/_form.html.haml
@@ -1,2 +1,33 @@
-%p TODO: Form for credit notes
+.col-md-6.col-md-offset-3
+  %h4
+    Credit Note for
+    = @member.name
+  = form_for(@credit_note, url: space_member_credit_notes_path(@space, @member, @credit_note)) do |f| 
+    .form-group{:class => "#{has_error(@credit_note, :description)} col-md-8", style: "padding-left:0;"}
+      = f.label :description 
+      = f.text_field :description, class: "form-control"
+      = field_errors(@credit_note, :description)
+    .form-group{:class => "#{has_error(@credit_note, :identifier)} col-md-4", style: "padding-right:0;"}
+      = f.label :identifier, "Credit Note Number"
+      = f.text_field :identifier, class: "form-control"
+      = field_errors(@credit_note, :identifier)
+    .form-group
+      %label{class: "col-md-8", style: "padding-left:0;padding-right:5px;margin-bottom:5px;"} Description
+      %label{class: "col-md-2", style: "padding-left:0;padding-right:5px;margin-bottom:5px;"} Tax $
+      %label{class: "col-md-2", style: "padding-left:0;padding-right:0;"} Amount
+    = f.fields_for :line_items do |l|
+      .form-group{:class => "#{has_error(l.object, :description)} col-md-8", style: "padding-left:0;padding-right:5px;margin-bottom:5px;"}
+        = l.text_field :description, class: "form-control"
+        = field_errors(l.object, :description)
+      .form-group{:class => "#{has_error(l.object, :tax_amount)} col-md-2", style: "padding-left:0;padding-right:5px;margin-bottom:5px;"}
+        = l.text_field :tax_amount, class: "form-control"
+        = field_errors(l.object, :tax_amount)
+      .form-group{:class => "#{has_error(l.object, :net_amount)} col-md-2", style: "padding-right:0;padding-left:0;margin-bottom:5px;"}
+        = l.text_field :net_amount, class: "form-control"
+        = field_errors(l.object, :net_amount)
+    %br{style: "clear:both;"}
+    %div{style: "margin-top:10px;"}
+      = f.submit class: "btn btn-primary"
+      or
+      = link_to("Cancel", :back)
 
